--- a/src/MultiAlignRogue/Clustering/ClusterView.xaml
+++ b/src/MultiAlignRogue/Clustering/ClusterView.xaml
@@ -81,7 +81,19 @@
                                 </xctk:DropDownButton>
                             </Grid>
                         </xcad:LayoutDocument>
-                        <xcad:LayoutDocument Title="MS/MS Spectra" CanClose="False"></xcad:LayoutDocument>
+                        <xcad:LayoutDocument Title="MS/MS Spectra" CanClose="False">
+                            <Grid Name="MsmsSpectrumGrid" Background="White">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="*" />
+                                    <RowDefinition Height="5" />
+                                    <RowDefinition Height="30" />
+                                </Grid.RowDefinitions>
+                                
+                                <oxy:PlotView DataContext="{Binding MsMsSpectraViewModel}" Grid.Row="0" Title="Ms/Ms Spectrum" Model="{Binding Model}" />
+                                
+                                <ComboBox Grid.Row="2" ItemsSource="{Binding MsMsSpectra}" SelectedItem="{Binding SelectedMsMsSpectra}" Width="190" HorizontalAlignment="Right"></ComboBox>
+                            </Grid>
+                        </xcad:LayoutDocument>
                     </xcad:LayoutDocumentPane>
                 </xcad:LayoutPanel>
             </xcad:LayoutRoot>
