--- a/src/MultiAlignRogue/MainWindow.xaml
+++ b/src/MultiAlignRogue/MainWindow.xaml
@@ -127,33 +127,32 @@
                         <ColumnDefinition Width="22*"/>
                         <ColumnDefinition Width="51*"/>
                     </Grid.ColumnDefinitions>
+                    <RadioButton Name="SelectBaseline" GroupName="ShouldAlignToBaseline" IsChecked="{Binding ShouldAlignToBaseline}" Margin="12,32,102,0" ToolTip="Align to a Baseline Dataset" Height="14" VerticalAlignment="Top"/>
+                    <RadioButton Name="SelectAMT" GroupName="ShouldAlignToBaseline" IsChecked="{Binding ShouldAlignToAMT}" Margin="11,63,102,0" ToolTip="Align to an AMT Tag Database" Height="14" VerticalAlignment="Top"/>
                     <Label Content="Baseline" Margin="39,0,188,0" Grid.Column="1" Height="24" VerticalAlignment="Top"/>
-                    <ComboBox Margin="4,24,10,0" Grid.ColumnSpan="2" DisplayMemberPath="Dataset.DatasetName" 
+                    <ComboBox Margin="37,24,10,0" Grid.ColumnSpan="2" DisplayMemberPath="Dataset.DatasetName" 
                               ItemsSource="{Binding DataContext.Datasets, ElementName=RogueMainWindow}"
                               SelectedItem="{Binding SelectedBaseline, Mode=TwoWay}" Height="22" VerticalAlignment="Top" />
-                    <Label Content="Tolerances" HorizontalAlignment="Left" Height="24" Margin="10,51,0,0" VerticalAlignment="Top" Width="77" FontWeight="Bold"/>
+                    <Label Content="Tolerances" HorizontalAlignment="Left" Height="24" Margin="10,138,0,0" VerticalAlignment="Top" Width="77" FontWeight="Bold"/>
 
-                    <Label Content="Mass Tolerance" VerticalContentAlignment="Top"  HorizontalAlignment="Left" Height="28" Margin="11,73,0,0" VerticalAlignment="Top" Width="168" Grid.ColumnSpan="2"/>
-                    <TextBox HorizontalContentAlignment="Center" Height="19" Margin="117,76,0,0" TextWrapping="Wrap" VerticalAlignment="Top" 
+                    <Label Content="Mass Tolerance" VerticalContentAlignment="Top"  HorizontalAlignment="Left" Height="28" Margin="11,160,0,0" VerticalAlignment="Top" Width="168" Grid.ColumnSpan="2"/>
+                    <TextBox HorizontalContentAlignment="Center" Height="19" Margin="117,163,0,0" TextWrapping="Wrap" VerticalAlignment="Top" 
                              Text="{Binding MassTolerance, Mode=TwoWay, NotifyOnSourceUpdated=True, UpdateSourceTrigger=PropertyChanged}" Grid.ColumnSpan="2" HorizontalAlignment="Left" Width="60"/>
-                    <Label Content="NET Tolerance" VerticalContentAlignment="Top"  HorizontalAlignment="Left" Height="28" Margin="11,93,0,0" VerticalAlignment="Top" Width="168" Grid.ColumnSpan="2"/>
-                    <TextBox HorizontalContentAlignment="Center" Height="19" Margin="117,97,0,0" TextWrapping="Wrap" VerticalAlignment="Top" 
+                    <Label Content="NET Tolerance" VerticalContentAlignment="Top"  HorizontalAlignment="Left" Height="28" Margin="11,180,0,0" VerticalAlignment="Top" Width="168" Grid.ColumnSpan="2"/>
+                    <TextBox HorizontalContentAlignment="Center" Height="19" Margin="117,184,0,0" TextWrapping="Wrap" VerticalAlignment="Top" 
                              Text="{Binding NetTolerance, Mode=TwoWay, NotifyOnSourceUpdated=True, UpdateSourceTrigger=PropertyChanged}" Grid.ColumnSpan="2" HorizontalAlignment="Left" Width="60"/>
-                    <Label Content="Alignment Algorithm" HorizontalContentAlignment="Left" Margin="151,51,5,0" FontWeight="Bold" Grid.Column="1" Height="28" VerticalAlignment="Top"/>
-                    <ComboBox Margin="142,80,14,0" Grid.Column="1" SelectedItem="{Binding SelectedAlignmentAlgorithm}"
+                    <Label Content="Alignment Algorithm" HorizontalContentAlignment="Left" Margin="151,138,5,0" FontWeight="Bold" Grid.Column="1" Height="28" VerticalAlignment="Top"/>
+                    <ComboBox Margin="142,167,14,0" Grid.Column="1" SelectedItem="{Binding SelectedAlignmentAlgorithm}"
                               ItemsSource="{Binding AlignmentAlgorithms, UpdateSourceTrigger=PropertyChanged}" Height="22" VerticalAlignment="Top"/>
-                    <Label Content="Calibration Method" HorizontalContentAlignment="Left" Margin="150,101,6,0" FontWeight="Bold" Grid.Column="1" Height="28" VerticalAlignment="Top"/>
-                    <ComboBox Margin="142,130,14,0" Grid.Column="1" SelectedItem="{Binding SelectedCalibrationType}"
+                    <Label Content="Calibration Method" HorizontalContentAlignment="Left" Margin="150,188,6,0" FontWeight="Bold" Grid.Column="1" Height="28" VerticalAlignment="Top"/>
+                    <ComboBox Margin="142,217,14,0" Grid.Column="1" SelectedItem="{Binding SelectedCalibrationType}"
                               ItemsSource="{Binding CalibrationOptions}" Height="22" VerticalAlignment="Top"/>
-                    <Button Content="Align to Baseline" HorizontalAlignment="Left" Margin="12,0,0,10" Width="110" Command="{Binding AlignToBaselineCommand}" Height="24" VerticalAlignment="Bottom"/>
+                    <Button Content="Align Datasets" HorizontalAlignment="Left" Margin="12,0,0,10" Width="110" Command="{Binding AlignCommand}" Height="24" VerticalAlignment="Bottom"/>
                     <Button Content="Display Alignment" Grid.Column="1" Margin="0,0,14,10" Command="{Binding DisplayAlignmentCommand}" HorizontalAlignment="Right" Width="108" Height="24" VerticalAlignment="Bottom"/>
 
                 </Grid>
             </TabItem>
-            <TabItem Header="3. AMT Alignment" HorizontalAlignment="Left">
-                <Grid/>
-            </TabItem>
-            <TabItem Header="4. Clustering" DataContext="{Binding ClusterSettingsViewModel}">
+            <TabItem Header="3. Clustering" DataContext="{Binding ClusterSettingsViewModel}">
                 <Grid>
                     <Label Content="Clustering Method" HorizontalContentAlignment="Left" Height="28" VerticalAlignment="Top" Margin="10,11,0,0" Width="150" HorizontalAlignment="Left" FontWeight="Bold"/>
                     <ComboBox Margin="10,37,278,0" SelectedItem="{Binding SelectedLcmsFeatureClusteringAlgorithm}"
