--- a/src/MultiAlignRogue/MainWindow.xaml
+++ b/src/MultiAlignRogue/MainWindow.xaml
@@ -46,7 +46,7 @@
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
-                <DataGridTemplateColumn Header="File Name" Width="*">
+                <DataGridTemplateColumn Header="Dataset Name" Width="*">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <Grid>
@@ -56,8 +56,6 @@
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
-                <DataGridCheckBoxColumn Header="Scans" Width="45" IsReadOnly="True" Binding="{Binding ScansBool}" />
-                <DataGridCheckBoxColumn Header="Raw" Width="40" IsReadOnly="True" Binding="{Binding RawBool}"/>
                 <DataGridCheckBoxColumn Header="Features" Width="60" IsReadOnly="True" Binding="{Binding FeaturesFound, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
                     <DataGridCheckBoxColumn.CellStyle>
                         <Style TargetType="{x:Type DataGridCell}">
